manifests/argocd/dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argocd-server
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  template:
    spec:
      containers:
        - name: argocd-server
          command:
            - argocd-server
            - '--insecure'
            - '--staticassets'
            - /shared/app
