manifests/argocd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argocd-server
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64

      containers:
        - name: argocd-server
          command:
            - argocd-server
            - '--insecure'
            - '--staticassets'
            - /shared/app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  labels:
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/part-of: argocd
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        node-role.kubernetes.io/proxmox: "true"
      containers:
      - name: argocd-repo-server
        image: ghcr.io/danmanners/argo-repo-server:aws-ksops-v2.2.5
        imagePullPolicy: Always
        resources: {}
        volumeMounts:
        - mountPath: /home/argocd/.aws
          name: argocd-aws-credentials
      volumes:
      - name: argocd-aws-credentials
        secret:
          defaultMode: 420
          secretName: argocd-aws-credentials
