manifests/argocd/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        node-role.kubernetes.io/proxmox: "true"
